[project]
name = "calendar-fetch"
version = "0.1.0"
description = "Fetches today's calendar events and posts a summary to Slack each morning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "requests>=2.33.1",
]
